force-app/main/default/objects/Contact/fields/Call_Sign__c.field-meta.xml
<CustomField>
    <fullName>Call_Sign__c</fullName>
    <formula>Account.Call_Sign__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Sign</label>
    <type>Text</type>
</CustomField>