force-app/main/default/objects/Contact/fields/Call_Sign_for_Latest_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Call_Sign_for_Latest_Campaign__c</fullName>
    <label>Call Sign for Latest Campaign</label>
    <length>64</length>
    <type>Text</type>
</CustomField>