force-app/main/default/objects/Contact/fields/Certificate_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Tracking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to bring over information from certs</description>
    <label>Certificate Tracking Lookup</label>
    <referenceTo>Certificate_Tracking__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>