force-app/main/default/objects/Contact/fields/city__c.field-meta.xml
<CustomField>
    <fullName>city__c</fullName>
    <label>City</label>
    <length>32</length>
    <type>Text</type>
</CustomField>