force-app/main/default/objects/Contact/fields/Comsearch_Contact_City__c.field-meta.xml
<CustomField>
    <fullName>Comsearch_Contact_City__c</fullName>
    <label>Comsearch Contact City</label>
    <length>64</length>
    <type>Text</type>
</CustomField>