force-app/main/default/objects/Contact/fields/Comsearch_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Comsearch_Contact_Email__c</fullName>
    <label>Comsearch Contact Email</label>
    <length>64</length>
    <type>Text</type>
</CustomField>