force-app/main/default/objects/Contact/fields/Comsearch_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Comsearch_Contact_Phone__c</fullName>
    <label>Comsearch Contact Phone</label>
    <length>16</length>
    <type>Text</type>
</CustomField>