force-app/main/default/objects/Contact/fields/Comsearch_Contact_State__c.field-meta.xml
<CustomField>
    <fullName>Comsearch_Contact_State__c</fullName>
    <label>Comsearch Contact State</label>
    <length>64</length>
    <type>Text</type>
</CustomField>