force-app/main/default/objects/Contact/fields/Comsearch_contact_Street__c.field-meta.xml
<CustomField>
    <fullName>Comsearch_contact_Street__c</fullName>
    <label>Comsearch Street</label>
    <length>64</length>
    <type>Text</type>
</CustomField>