force-app/main/default/objects/Contact/fields/Comsearch_Contact_Zip__c.field-meta.xml
<CustomField>
    <fullName>Comsearch_Contact_Zip__c</fullName>
    <label>Comsearch Contact Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>