force-app/main/default/objects/Contact/fields/Comsearch_Licensee_or_Contact__c.field-meta.xml
<CustomField>
    <fullName>Comsearch_Licensee_or_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to signify if a contact is used with CS, helps with lookups/flows</inlineHelpText>
    <label>Comsearch Licensee or Contact</label>
    <type>Checkbox</type>
</CustomField>