force-app/main/default/objects/Contact/fields/Comsearch_Quarterly_Results__c.field-meta.xml
<CustomField>
    <fullName>Comsearch_Quarterly_Results__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comsearch Quarterly Results</label>
    <referenceTo>comsearch_results__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>