force-app/main/default/objects/Contact/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <inlineHelpText>Used for contact lookup for comsearch</inlineHelpText>
    <label>Licensee Email</label>
    <length>64</length>
    <type>Text</type>
</CustomField>