force-app/main/default/objects/Contact/fields/Contact_Incident_Tracker_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Contact_Incident_Tracker_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>used to build relationship between incidents</description>
    <label>Contact Incident Tracker Lookup</label>
    <referenceTo>Incident_Tracker__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>