force-app/main/default/objects/Contact/fields/Contact_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contact_Notes__c</fullName>
    <inlineHelpText>Enter short notes for reference, or view chatter for longer comments</inlineHelpText>
    <label>Contact Notes</label>
    <type>TextArea</type>
</CustomField>