force-app/main/default/objects/Contact/fields/Contractor_POC__c.field-meta.xml
<CustomField>
    <fullName>Contractor_POC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Deconstruction &amp; Decommissioning Key Contractor POC</inlineHelpText>
    <label>Contractor POC</label>
    <type>Checkbox</type>
</CustomField>