force-app/main/default/objects/Contact/fields/Incident_site_id_lookup__c.field-meta.xml
<CustomField>
    <fullName>Incident_site_id_lookup__c</fullName>
    <formula>Contact_Incident_Tracker_Lookup__r.Name</formula>
    <label>Incident site id lookup</label>
    <type>Text</type>
</CustomField>