force-app/main/default/objects/Contact/fields/Key_Info__c.field-meta.xml
<CustomField>
    <fullName>Key_Info__c</fullName>
    <formula>FirstName  + &quot; &quot;  +  LastName  + &quot;, &quot;  +   Title + &quot; &quot;  +  Mailing_Address_Name__c + &quot; &quot;  +  MailingStreet + &quot; &quot; +  MailingCity + &quot;, &quot; +  MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field used to hold key information for easier searches in Flows.</inlineHelpText>
    <label>Key Info</label>
    <type>Text</type>
</CustomField>