force-app/main/default/objects/Contact/fields/Latest_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Latest_Campaign__c</fullName>
    <label>Latest Campaign</label>
    <length>64</length>
    <type>Text</type>
</CustomField>