force-app/main/default/objects/Contact/fields/Mailing_Address_Name__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Name__c</fullName>
    <label>Mailing Address Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>