force-app/main/default/objects/Contact/fields/Name_for_Matching__c.field-meta.xml
<CustomField>
    <fullName>Name_for_Matching__c</fullName>
    <inlineHelpText>Placeholder - used for matching names brought in from LMS.  May be know as Entity name.</inlineHelpText>
    <label>Name for Matching</label>
    <length>128</length>
    <type>Text</type>
</CustomField>