force-app/main/default/objects/Contact/fields/Region_RF_Field_Users__c.field-meta.xml
<CustomField>
    <fullName>Region_RF_Field_Users__c</fullName>
    <inlineHelpText>Used to help identify regional leads/users who require email alerts</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>NorthEast</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Nationwide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>