force-app/main/default/objects/Contact/fields/state__c.field-meta.xml
<CustomField>
    <fullName>state__c</fullName>
    <label>State</label>
    <length>10</length>
    <type>Text</type>
</CustomField>