force-app/main/default/objects/Contact/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <inlineHelpText>Used for easier reporting and ULS info for contacts</inlineHelpText>
    <label>Street Address</label>
    <length>64</length>
    <type>Text</type>
</CustomField>