force-app/main/default/objects/Contact/fields/T_Mobile_Contact__c.field-meta.xml
<CustomField>
    <fullName>T_Mobile_Contact__c</fullName>
    <label>T-Mobile Contact</label>
    <length>32</length>
    <type>Text</type>
</CustomField>