force-app/main/default/objects/Contact/recordTypes/ComSearch_Contacts.recordType-meta.xml
<RecordType>
    <fullName>ComSearch_Contacts</fullName>
    <active>false</active>
    <label>ComSearch Contacts</label>
</RecordType>