force-app/main/default/objects/Contact/recordTypes/ERI.recordType-meta.xml
<RecordType>
    <fullName>ERI</fullName>
    <active>true</active>
    <description>Used for the ERI project</description>
    <label>ERI</label>
</RecordType>