force-app/main/default/objects/Contact/recordTypes/General_Contractors.recordType-meta.xml
<RecordType>
    <fullName>General_Contractors</fullName>
    <active>true</active>
    <label>General Contractors</label>
</RecordType>