force-app/main/default/objects/Contact/recordTypes/PBS_Contacts.recordType-meta.xml
<RecordType>
    <fullName>PBS_Contacts</fullName>
    <active>true</active>
    <description>Contacts for PBS Project Only</description>
    <label>PBS Contacts</label>
</RecordType>